ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Minor - P4
    • 2.5.0
    • Affects Version/s: 2.2.0
    • Component/s: Concurrency
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      There was a regression where this broke long ago - in 2.1.x i think. Anyway, the otherLock variable is zeroed everytime in the broken variant which makes us have to hit a mutex (in DBLocksMap which is a mapsf) to look up the right db lock as part of that process. The lookup is quick so it is a low P bug.

            Assignee:
            Dwight Merriman
            Reporter:
            Dwight Merriman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: