SERVER-9396 otherLock cache variable was not working - fixed