src/mongo/db/lockstate.cpp
@@ -211,16 +211,16 @@ namespace mongo {
     }
 
     void LockState::unlockedOther() {
-        _otherName = "";
+        // we leave _otherName and _otherLock set as
+        // _otherLock exists to cache a pointer
         _otherCount = 0;
-        _otherLock = 0;
     }
 
     LockStat* LockState::getRelevantLockStat() {
         if ( _whichNestable )
             return Lock::nestableLockStat( _whichNestable );
 
-        if ( _otherLock )
+        if ( _otherCount && _otherLock )
             return &_otherLock->stats;
         
         if ( isRW() ) 
